Add link to feeds

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -43,6 +43,9 @@
                 <li>
                     <a href="/posts">Posts</a>
                 </li>
+                <li>
+                    <a class="logo-image feed-image" href="/follow"><img src="/images/feed-icon-white.png" aria-hidden="true"><img src="/images/feed-icon.png" alt="feed"></a>
+                </li>
             </ul>
         </nav>
         <div class="time invisible" aria-hidden="true">00/00/0000 00:00</div>
