--- a/index.njk
+++ b/index.njk
@@ -4,9 +4,7 @@ layout: window.html
 special: home-title
 ---
 
-<h2>Howdy!</h2>
-
-<p>I'm <a href="/about">Cobb</a> (or cobbland or cobb-dot-land or even Jacob) and this is my <a href="/colophon">website</a>. Follow my <a href="/follow">RSS feed</a> to keep up. I also make tabletop roleplay games and adventures as <a href="https://illuminatedsnail.com">Illuminated Snail</a>. And I have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason).
+<p>I'm <a href="/about">Cobb</a> (or cobbland or cobb-dot-land or even Jacob) and this is my website. Below, you will find links to most of my <a href="/pages">pages</a> and my most recent <a href="/posts">posts</a>. Follow my <a href="/follow">RSS feed(s)</a> to keep up. And feel free to <a href="/contact">contact me</a> about whatever.
 
 <div class="home-latest">
 
