--- a/css/styles.css
+++ b/css/styles.css
@@ -196,8 +196,27 @@ nav p {
 }
 
 .logo-image img {
+    display: flex;
     height: 1.4rem;
     width: 1.4rem;
+    height: 100%;
+}
+
+.feed-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.feed-image img {
+    height: 1rem;
+    width: 1rem;
+}
+
+a.logo-image:hover {
+    background-color: var(--text-color);
+    min-height: 100%;
 }
 
 .logo-image img:first-of-type {
