--- a/posts.njk
+++ b/posts.njk
@@ -34,7 +34,9 @@ layout: window-pages.html
         <div class="post-card">
             <p class="note" style="margin: 0 0 3.2px;">Reply to <a href="{{ post.data.reply }}">{{ post.data.author }}</a></p>
             <div class="post-card-note">{{ post.content | safe }}</div>
-            <p class="date"><a href="{{ post.url }}">{{ post.date.toDateString() }}</a></p>
+            <p class="date">
+                <a href="{{ post.url }}">{{ post.date.toDateString() }}</a>
+            </p>
         </div>
     {% elif "bookmark" in post.data.tags %}
         <div class="post-card">
@@ -43,16 +45,16 @@ layout: window-pages.html
                 <blockquote style="margin: 0;" cite="{{ post.data.bookmark }}">{{ post.data.quote }}</blockquote>
             {% endif %}
             <div class="post-card-note">{{ post.content | safe }}</div>
-            <a href="{{ post.url }}">
-                <p class="date">{{ post.date.toDateString() }}</p>
-            </a>
+            <p class="date">
+                <a href="{{ post.url }}">{{ post.date.toDateString() }}</a>
+            </p>
         </div>
     {% elif "note" in post.data.tags %}
         <div class="post-card">
             <div class="post-card-note">{{ post.content | safe }}</div>
-            <a href="{{ post.url }}">
-                <p class="date">{{ post.date.toDateString() }}</p>
-            </a>
+            <p class="date">
+                <a href="{{ post.url }}">{{ post.date.toDateString() }}</a>
+            </p>
         </div>
     {% endif %}
 {% endfor %}
