--- a/media.njk
+++ b/media.njk
@@ -6,9 +6,9 @@ tags: [slashpage, page]
 <h2>Status</h2>
 
 <ul class="media-card">
-    <li><b>Level:</b> 2</li>
-    <li><b>Coins:</b> 3</li>
-    <li><b>Progress:</b> 3/4 shelved to level 3</li>
+    <li><b>Level:</b> 3</li>
+    <li><b>Coins:</b> 5</li>
+    <li><b>Progress:</b> 0/6 shelved to level 4</li>
     <li><b>Playlist Slots Unlocked:</b> 3</li>
 </ul>
 
@@ -48,7 +48,7 @@ tags: [slashpage, page]
 
 <h2>Binned</h2>
 
-<p>Future "carts". Collections to choose from when loading my playlist. (Spend one coin to roll or two to pick.)</p>
+<p>Future "carts". A collection to choose from when loading playlist. (Spend one coin to roll or two to pick.)</p>
 
 <ol>
     {% for post in collections.media %}
