Style triple dagger

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -29,7 +29,7 @@
         <nav>
             <ul>
                 <li>
-                    <a class="logo-image" href="/"><img src="/images/logotinywhite.png" aria-hidden="true"><img src="/images/logotiny.png" aria-hidden="true">cobb.land</a>
+                    <a class="logo-image" href="/"><img src="/images/logotinywhite.png" aria-hidden="true" alt="logo"><img src="/images/logotiny.png" aria-hidden="true" alt="logo">cobb.land</a>
                 </li>
                 <li>
                     <a href="/about">About</a>
@@ -44,7 +44,7 @@
                     <a href="/posts">Posts</a>
                 </li>
                 <li>
-                    <a class="logo-image feed-image" href="/follow"><img src="/images/feed-icon-white.png" aria-hidden="true"><img src="/images/feed-icon.png" alt="feed"></a>
+                    <a class="logo-image feed-image" href="/follow"><img src="/images/feed-icon-white.png" aria-hidden="true" alt="feed"><img src="/images/feed-icon.png" alt="feed"></a>
                 </li>
             </ul>
         </nav>
