--- a/_includes/triple-dagger.html
+++ b/_includes/triple-dagger.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triple Dagger</title>
+    <link rel="stylesheet" href="/css/triple-dagger.css">
 </head>
 <body>
-    {{ content }}
+    <div class="border">
+        <div class="top">
+            <div class="top-left-corner"></div>
+            <div class="top-middle"></div>
+            <div class="top-right-corner"></div>
+        </div>
+        <div class="middle">
+            <div class="left"></div>
+            <div class="content">
+                {{ content }}
+            </div>
+            <div class="right"></div>
+        </div>
+        <div class="bottom">
+            <div class="bottom-left-corner"></div>
+            <div class="bottom-middle"></div>
+            <div class="bottom-right-corner"></div>
+        </div>
+    </div>
 </body>
 </html>
