Add favicon, email link to triple dagger

--- a/_includes/triple-dagger.html
+++ b/_includes/triple-dagger.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triple Dagger</title>
     <link rel="stylesheet" href="/css/triple-dagger.css">
+    <link rel="shortcut icon" href="/images/triple-dagger-icon.png" type="image/png">
 </head>
 <body>
     <div class="border">
