--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta name="description" content="A website"> -->
     <meta name="theme-color" content="#75cec8">
     <title>{{ title }}</title>
     <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="cobb.land">
@@ -19,7 +18,12 @@
     <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc">
     <link rel="feed" type="text/html" href="/h-feed/">
     <script type="module" src="/js/scripts.js"></script>
-    <meta property="og:image" content="https://cobb.land/images/android-chrome-512x512.png">
+    <meta property="og:image" content="https://cobb.land/images/cobbland-banner.jpeg">
+    <meta property="og:title" content="{{ title }}">
+    <!-- <meta name="description" content="">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content=""> -->
 </head>
 <body>
 
