--- a/_includes/window.html
+++ b/_includes/window.html
@@ -33,7 +33,7 @@ layout: layout.html
             </div>
         </div>
     </div>
-    <main>
+    <main class="{{ class | default: "" }}">
             {{ content }}
     </main>
 </div>
