--- a/media.njk
+++ b/media.njk
@@ -7,8 +7,8 @@ tags: [slashpage, page]
 
 <ul class="media-card">
     <li><b>Level:</b> 3</li>
-    <li><b>Coins:</b> 5</li>
-    <li><b>Progress:</b> 1/6 shelved to level 4</li>
+    <li><b>Coins:</b> 7</li>
+    <li><b>Progress:</b> 2/6 shelved to level 4</li>
     <li><b>Playlist Slots Unlocked:</b> 3</li>
 </ul>
 
@@ -67,7 +67,7 @@ tags: [slashpage, page]
 
 <p>A gamified intentional media tracker with RPG-light mechanics.</p>
 
-<p>Play begins at <b>level 1</b> with <b>3 coins</b> and <b>2 slots</b>.</p>
+<p>Play begins at level 1 with 3 coins and 2 slots.</p>
 
 <h3>Levels</h3>
 
