--- a/now.njk
+++ b/now.njk
@@ -2,15 +2,15 @@
 title: Now
 layout: page.njk
 tags: [slashpage, page]
-date: 2025-08-13T08:05:00.00-04:00
+date: 2025-09-17T08:26:00.00-04:00
 ---
 <p>Aside from trying to piece together this website, I'm also:</p>
 
 <ul>
-    <li>Getting really into the Commodore 64</li>
+    <li>Getting really into emulating old games and other software</li>
     <li>Working my way through <a href="https://www.theodinproject.com/">The Odin Project</a></li>
     <li>Trying to learn Thai</li>
-    <li>Attempting to make it through Blaugust</li>
+    <li>Editing recipes for my wife's <a href="https://ohsopeasy.com">upcoming cookbook project</a></li>
 </ul>
 
 <p>And I'm reading/watching/playing:</p>
