--- a/index.njk
+++ b/index.njk
@@ -44,5 +44,21 @@ special: home-title
     
         <p class="pushdown"><a href="/posts">More posts</a></p>
     </div>
+
+    <div>
+        <h2>Media</h2>
+
+        <ul>
+            {% for post in collections.media | reverse %}
+                {% if "playlist" in post.data.tags and post.data.title != "LOCKED" and post.data.title != "EMPTY" %}
+                    <li>
+                        <a href="{{post.url}}">{{post.data.title}}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+
+        <p class="pushdown"><a href="/media">More media</a></p>
+    </div>
     
 </div>
