--- a/media.njk
+++ b/media.njk
@@ -7,8 +7,8 @@ tags: [slashpage, page]
 
 <ul class="media-card">
     <li><b>Level:</b> 4</li>
-    <li><b>Coins:</b> 8</li>
-    <li><b>Progress:</b> 0/8 shelved to level 5</li>
+    <li><b>Coins:</b> 10</li>
+    <li><b>Progress:</b> 1/8 shelved to level 5</li>
     <li><b>Playlist Slots Unlocked:</b> 4</li>
 </ul>
 
@@ -83,4 +83,4 @@ tags: [slashpage, page]
 
 <h3>Ratings</h3>
 
-<p>Ratings are out of four, defined from one to four as follows: do not recommend, recommend with reservations, recommend, strongly recommend.</p>
+<p>Ratings are out of four, defined from one to four as follows: do not recommend, recommend with reservations, recommend, strongly recommend. Recommendations assume the recommendee enjoys other similar things.</p>
