--- a/blogroll.njk
+++ b/blogroll.njk
@@ -31,4 +31,10 @@ tags: [slashpage, page]
     </ul>
 </div>
 
-<p class="note">Note that I use the term "blogroll" loosely here. Most websites linked above are blogs, but some may be digital gardens, wikis, portfolios, newsletters, et cetera.</p>
+<p class="note">Note that I use the term "blogroll" loosely here. Most websites linked above are blogs, but some may be digital gardens, wikis, portfolios, newsletters, et cetera. Also note that inclusion in this blogroll is not an endorsement.</p>
+
+<p>If you'd like to link to me, feel free to use my badge. Please let me know if you do, so I can link to you (if you're cool).</p>
+
+<a class="link-icon" href="https://cobb.land">
+    <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
+</a>
