--- a/notes.njk
+++ b/notes.njk
@@ -6,7 +6,7 @@ layout: window-pages.html
 {% for post in collections.post | reverse %}
     {% if "reply" in post.data.tags %}
         <div class="post-card">
-            <p class="note" style="margin: 0 0 3.2px;">Reply to <a href="{{ post.data.reply }}">{{ post.data.author }}</a></p>
+            <p class="note" style="margin: 0 0 3.2px;">Reply to <a href="{{ post.data.reply }}">{{ post.data.name }}</a></p>
             <div class="post-card-note">{{ post.content | safe }}</div>
             <p class="date">
                 <a href="{{ post.url }}">{{ post.date.toDateString() }}</a>
