--- a/posts.njk
+++ b/posts.njk
@@ -42,7 +42,7 @@ layout: window-pages.html
     {% endif %}
     {% if "reply" in post.data.tags %}
         <div class="post-card">
-            <p class="note" style="margin: 0 0 3.2px;">Reply to <a href="{{ post.data.reply }}">{{ post.data.author }}</a></p>
+            <p class="note" style="margin: 0 0 3.2px;">Reply to <a href="{{ post.data.reply }}">{{ post.data.name }}</a></p>
             <div class="post-card-note">{{ post.content | safe }}</div>
             <p class="date">
                 <a href="{{ post.url }}">{{ post.date.toDateString() }}</a>
