--- a/notes.njk
+++ b/notes.njk
@@ -6,7 +6,14 @@ layout: window-pages.html
 {% for post in collections.post | reverse %}
     {% if "reply" in post.data.tags %}
         <div class="post-card">
-            <p class="note" style="margin: 0 0 3.2px;">Reply to <a href="{{ post.data.reply }}">{{ post.data.name }}</a></p>
+            <p class="note" style="margin: 0 0 3.2px;">Reply to 
+                <a href="{{ post.data.reply }}">{{ post.data.name }}</a>
+                {% if post.data.author and post.data.site %}
+                    by <a class="" href="{{ post.data.site }}">{{ post.data.author }}</a>
+                {% elif post.data.author %}
+                    by <span class"">{{ post.data.author }}</span>
+                {% endif %}
+            </p>
             <div class="post-card-note">{{ post.content | safe }}</div>
             <p class="date">
                 <a href="{{ post.url }}">{{ post.date.toDateString() }}</a>
@@ -14,7 +21,14 @@ layout: window-pages.html
         </div>
     {% elif "bookmark" in post.data.tags %}
         <div class="post-card">
-            <p class="note" style="margin: 0 0 3.2px;">Bookmark of <a href="{{ post.data.bookmark }}">{{ post.data.name }}</a></p>
+            <p class="note" style="margin: 0 0 3.2px;">Bookmark of 
+                <a href="{{ post.data.bookmark }}">{{ post.data.name }}</a>
+                {% if post.data.author and post.data.site %}
+                    by <a class="" href="{{ post.data.site }}">{{ post.data.author }}</a>
+                {% elif post.data.author %}
+                    by <span class"">{{ post.data.author }}</span>
+                {% endif %}
+            </p>
             {% if post.data.quote %}
                 <blockquote style="margin: 0;" cite="{{ post.data.bookmark }}">{{ post.data.quote }}</blockquote>
             {% endif %}
