--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -13,6 +13,7 @@
     <link rel=icon href="/images/android-chrome-512x512.png" sizes="512x512" type="image/png">
     <link rel="apple-touch-icon icon" href="/images/apple-touch-icon.png" sizes="180x180" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/crt.css">
     <meta name="fediverse:creator" content="@cobb@dice.camp">
     <link rel="webmention" href="https://webmention.io/cobb.land/webmention">
     <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc">
