--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -57,8 +57,43 @@
         <div class="time invisible" aria-hidden="true">00/00/0000 00:00</div>
     </header>
 
-    {{ content }}
+    <div id="middle-content">
 
+        {{ content }}
+
+        <div id="side-panel">
+
+            <div class="content-window" onload="loadWindow">
+                <div class="title-bar">
+                    <div class="title-lines">
+                        <div class="lines" aria-hidden="true">
+                            <div class="title-bar-line"></div>
+                            <div class="title-bar-line"></div>
+                            <div class="title-bar-line"></div>
+                            <div class="title-bar-line"></div>
+                            <div class="title-bar-line"></div>
+                        </div>
+                        <div class="title-bar-title">
+                            music
+                        </div>
+                        <div class="lines lines-left" aria-hidden="true">
+                            <div class="lines-left-of-button">
+                                <div class="title-bar-line"></div>
+                                <div class="title-bar-line"></div>
+                                <div class="title-bar-line"></div>
+                                <div class="title-bar-line"></div>
+                                <div class="title-bar-line"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="https://libre.fm/user/cobbland/"><img src="https://libre.fm/user/cobbland/now" alt loading="lazy" style="width: 100%; max-width: 90ch; height: auto;"></a>
+            </div>
+
+        </div>
+
+    </div>
+    
     <footer>
         <div class="content-window" onload="loadWindow">
             <div class="title-bar">
@@ -71,7 +106,7 @@
                         <div class="title-bar-line"></div>
                     </div>
                     <div class="title-bar-title">
-                        footer
+                        buttons
                     </div>
                     <div class="lines lines-left" aria-hidden="true">
                         <div class="lines-left-of-button">
