Add woodpaneled webring

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -261,6 +261,23 @@
                     </span>
                     <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
                 </div>
+                <div class="link-icon">
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
+                        <defs>
+                            <linearGradient id="pinkGradientVertical" x1="0%" y1="0%" x2="0%" y2="100%">
+                            <stop offset="0%" stop-color="#E5B2E4"/>
+                            <stop offset="100%" stop-color="#BDA3D8"/>
+                            </linearGradient>
+                        </defs>
+                        <rect class="icon-rect" height="31" width="88" fill="url(#pinkGradientVertical)"/>
+                    </svg>
+                    <span class="icon-text">
+                        <a href="https://mysteriesofmontreal.blogspot.com">←</a>
+                        <a href="https://woodpaneled.org">Wood-Paneled</a>
+                        <a href="https://cartweel.neocities.org/Onion%20Ring/ring-home">→</a>
+                    </span>
+                    <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
+                </div>
                 <a class="link-icon" id="random-blog-button" href="/">
                     <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <rect class="icon-rect" height="31" width="88" fill="#A82CB9">
