Add code to generate next and last link for woodpaneled

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#75cec8">
     <title>{{ title }}</title>
     <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="cobb.land">
     <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
-    <link rel=icon href="/images/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel=icon href="/images/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel=icon href="/images/android-chrome-192x192.png" sizes="192x192" type="image/png">
-    <link rel=icon href="/images/android-chrome-512x512.png" sizes="512x512" type="image/png">
+    <link rel="icon" href="/images/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/images/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/images/android-chrome-192x192.png" sizes="192x192" type="image/png">
+    <link rel="icon" href="/images/android-chrome-512x512.png" sizes="512x512" type="image/png">
     <link rel="apple-touch-icon icon" href="/images/apple-touch-icon.png" sizes="180x180" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/crt.css">
@@ -215,7 +213,7 @@
                 <a class="link-icon" href="/">
                     <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <rect class="icon-rect" height="31" width="88" fill="#555">
-                    </svg>
+                    </rect></svg>
                     <span class="icon-text">cobb.land © {% year %}</span>
                     <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
                 </a>
@@ -229,9 +227,9 @@
                     <img src="/images/32b-pcb.png" alt="32b cafe" height="31" width="88">
                 </a>
                 <div class="link-icon">
-                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <rect class="icon-rect" height="31" width="88" fill="#FC4F1E">
-                    </svg>
+                    </rect></svg>
                     <span class="icon-text" style="font-size: 18px;">
                         <a href="https://xn--sr8hvo.ws/previous">←</a>
                         <a href="https://xn--sr8hvo.ws">🕸💍</a>
@@ -240,9 +238,9 @@
                     <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
                 </div>
                 <div class="link-icon">
-                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <rect class="icon-rect" height="31" width="88" fill="#00A4FF">
-                    </svg>
+                    </rect></svg>
                     <span class="icon-text">
                         <a href="https://fediring.net/previous?host=cobb.land">←</a>
                         <a href="https://fediring.net">fediring</a>
@@ -251,9 +249,9 @@
                     <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
                 </div>
                 <div class="link-icon">
-                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <rect class="icon-rect" height="31" width="88" fill="#FA9ABA">
-                    </svg>
+                    </rect></svg>
                     <span class="icon-text">
                         <a href="https://hotlinewebring.club/cobbland/previous">←</a>
                         <a href="https://hotlinewebring.club/">HOTLINE</a>
@@ -265,23 +263,23 @@
                     <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <defs>
                             <linearGradient id="pinkGradientVertical" x1="0%" y1="0%" x2="0%" y2="100%">
-                            <stop offset="0%" stop-color="#E5B2E4"/>
-                            <stop offset="100%" stop-color="#BDA3D8"/>
+                            <stop offset="0%" stop-color="#E5B2E4"></stop>
+                            <stop offset="100%" stop-color="#BDA3D8"></stop>
                             </linearGradient>
                         </defs>
-                        <rect class="icon-rect" height="31" width="88" fill="url(#pinkGradientVertical)"/>
+                        <rect class="icon-rect" height="31" width="88" fill="url(#pinkGradientVertical)"></rect>
                     </svg>
                     <span class="icon-text">
-                        <a href="https://mysteriesofmontreal.blogspot.com">←</a>
+                        <a href="http://mysteriesofmontreal.blogspot.com/" id="woodpaneled-last">←</a>
                         <a href="https://woodpaneled.org">Wood-Paneled</a>
-                        <a href="https://cartweel.neocities.org/Onion%20Ring/ring-home">→</a>
+                        <a href="https://cartweel.neocities.org/Onion%20Ring/ring-home" id="woodpaneled-next">→</a>
                     </span>
                     <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
                 </div>
                 <a class="link-icon" id="random-blog-button" href="/">
                     <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <rect class="icon-rect" height="31" width="88" fill="#A82CB9">
-                    </svg>
+                    </rect></svg>
                     <span class="icon-text" style="font-size: 18px;">🎲</span>
                     <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
                 </a>
@@ -304,10 +302,10 @@
         <a class="u-logo u-photo" href="/images/android-chrome-512x512.png"></a>
         <a rel="me" class="u-url" href="https://gravatar.com/cobbland"></a>
         <a href="https://bsky.app/profile/cobb.land" rel="me atproto" class="u-url">https://bsky.app/profile/cobb.land</a>
-        <img class="u-photo" src="/images/android-chrome-512x512.png" />
+        <img class="u-photo" src="/images/android-chrome-512x512.png">
         <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
 
     <div id="winterContainer" class="winterContainer" aria-hidden="true"></div>
-</body>
-</html>
+
+</body></html>
