--- a/now.njk
+++ b/now.njk
@@ -2,6 +2,7 @@
 title: Now
 layout: page.njk
 tags: [slashpage, page]
+date: 2026-01-05T17:22:00.00-05:00
 ---
 <p><a href="https://nownownow.com/about">Now</a>:</p>
 
